localhost -> 개발 서버 IP 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #Kakao API Key
 kakao.api.key=72c33e596f476c2ad70dea6ee9e24b46
 kakao.client.secret=hVLxNcM7R7ufPUNhFWPfdIGmtW3QLwcQ
-kakao.login.redirect.uri=http://localhost:8080/auth/kakao/callback
-kakao.logout.redirect.uri=http://localhost:8080/auth/kakao/logout
+kakao.login.redirect.uri=http://49.50.133.51:8080/auth/kakao/callback
+kakao.logout.redirect.uri=http://49.50.133.51:8080/auth/kakao/logout
 
 
