--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,9 @@ kakao.client.secret=hVLxNcM7R7ufPUNhFWPfdIGmtW3QLwcQ
 kakao.login.redirect.uri=http://49.50.133.51:8080/auth/kakao/callback
 kakao.logout.redirect.uri=http://49.50.133.51:8080/auth/kakao/logout
 
+# JWT Configuration (access token validity: 1 day, refresh token validity: 30 days)
+jwt.secret=moaAppJWTSecretKey/SwypAPP2025-3
+jwt.access-token-validity=86400
+jwt.refresh-token-validity=2592000
+
 
