fix: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://49.50.133.51:3306/${DB_USERNAME}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://49.50.133.51:3306/moaapp_test?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
