--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://49.50.133.51:3306/moaapp_test?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=moaapp_test_user
-spring.datasource.password=Moaapp_test3
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
@@ -29,14 +29,32 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #Kakao API Key
-kakao.api.key=72c33e596f476c2ad70dea6ee9e24b46
-kakao.client.secret=hVLxNcM7R7ufPUNhFWPfdIGmtW3QLwcQ
-kakao.login.redirect.uri=http://49.50.133.51:8080/auth/kakao/callback
-kakao.logout.redirect.uri=http://49.50.133.51:8080/auth/kakao/logout
+kakao.api.key=${KAKAO_API_KEY}
+kakao.client.secret=${KAKAO_CLIENT_SECRET}
+kakao.login.redirect.uri=${KAKAO_LOGIN_REDIRECT_URI}
+kakao.logout.redirect.uri=${KAKAO_LOGOUT_REDIRECT_URI}
+
+#Apple API Key
+apple.team.id=${APPLE_TEAM_ID}
+apple.client.id=${APPLE_CLIENT_ID}
+apple.key.id=${APPLE_KEY_ID}
+apple.private.key.path=${APPLE_PRIVATE_KEY_PATH}
+apple.redirect.uri=${APPLE_REDIRECT_URI}
 
 # JWT Configuration (access token validity: 1 day, refresh token validity: 30 days)
-jwt.secret=moaAppJWTSecretKey/SwypAPP2025-3
-jwt.access-token-validity=86400
-jwt.refresh-token-validity=2592000
+jwt.secret=${JWT_SECRET}
+jwt.access-token-validity=${JWT_ACCESS_TOKEN_VALIDITY}
+jwt.refresh-token-validity=${JWT_REFRESH_TOKEN_VALIDITY}
+
+# Jasypt Encryption Configuration
+jasypt.encryptor.algorithm=PBEWithHMacSHA512AndAES_256
+jasypt.encryptor.key-obtention-iterations=1000
+jasypt.encryptor.pool-size=1
+jasypt.encryptor.provider-name=SunJCE
+jasypt.encryptor.salt-generator-classname=org.jasypt.salt.RandomSaltGenerator
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.RandomIvGenerator
+jasypt.encryptor.string-output-type=base64
+# Master password will be provided via environment variable JASYPT_ENCRYPTOR_PASSWORD
+jasypt.encryptor.password=${JASYPT_ENCRYPTOR_PASSWORD:}
 
 
