--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,7 @@ jobs:
           key: ${{secrets.SSH_KEY}}
           source: target/moa-app-1.0.0.jar
           target: /app
+          strip_components: 1
           overwrite: 'true'
 
 
