소셜 로그인 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 kakao.api.key=${KAKAO_API_KEY}
 kakao.client.secret=${KAKAO_CLIENT_SECRET}
 kakao.login.redirect.uri=${KAKAO_LOGIN_REDIRECT_URI}
-kakao.logout.redirect.uri=${KAKAO_LOGOUT_REDIRECT_URI}
+kakao.admin.key=${KAKAO_ADMIN_KEY}
 
 #Apple API Key
 apple.team.id=${APPLE_TEAM_ID}
@@ -46,6 +46,11 @@ jwt.secret=${JWT_SECRET}
 jwt.access-token-validity=${JWT_ACCESS_TOKEN_VALIDITY}
 jwt.refresh-token-validity=${JWT_REFRESH_TOKEN_VALIDITY}
 
+# Clova Studio Configuration
+clova.studio.api-key=${CLOVA_STUDIO_API_KEY}
+clova.studio.apigw-key=${CLOVA_STUDIO_APIGW_KEY}
+clova.studio.invoke-url=${CLOVA_STUDIO_INVOKE_URL}
+
 # Jasypt Encryption Configuration
 jasypt.encryptor.algorithm=PBEWithHMacSHA512AndAES_256
 jasypt.encryptor.key-obtention-iterations=1000
@@ -55,6 +60,6 @@ jasypt.encryptor.salt-generator-classname=org.jasypt.salt.RandomSaltGenerator
 jasypt.encryptor.iv-generator-classname=org.jasypt.iv.RandomIvGenerator
 jasypt.encryptor.string-output-type=base64
 # Master password will be provided via environment variable JASYPT_ENCRYPTOR_PASSWORD
-jasypt.encryptor.password=${JASYPT_ENCRYPTOR_PASSWORD:}
+jasypt.encryptor.password=${JASYPT_ENCRYPTOR_PASSWORD}
 
 
