Mysql -> PostgreSql 로 변환

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,20 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
-# MySQL Database Configuration
+# PostgreSql Database Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# PostgreSQL 특정 설정
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Logging
@@ -48,8 +51,9 @@ jwt.refresh-token-validity=${JWT_REFRESH_TOKEN_VALIDITY}
 
 # Clova Studio Configuration
 clova.studio.api-key=${CLOVA_STUDIO_API_KEY}
-clova.studio.apigw-key=${CLOVA_STUDIO_APIGW_KEY}
 clova.studio.invoke-url=${CLOVA_STUDIO_INVOKE_URL}
+# Clova Studio Embedding API URL (RAG용)
+clova.studio.embedding-url=${CLOVA_STUDIO_EMBEDDING_URL}
 
 # Jasypt Encryption Configuration
 jasypt.encryptor.algorithm=PBEWithHMacSHA512AndAES_256
@@ -59,6 +63,7 @@ jasypt.encryptor.provider-name=SunJCE
 jasypt.encryptor.salt-generator-classname=org.jasypt.salt.RandomSaltGenerator
 jasypt.encryptor.iv-generator-classname=org.jasypt.iv.RandomIvGenerator
 jasypt.encryptor.string-output-type=base64
+
 # Master password will be provided via environment variable JASYPT_ENCRYPTOR_PASSWORD
 jasypt.encryptor.password=${JASYPT_ENCRYPTOR_PASSWORD}
 
