클로버 AI 채팅 이미지 추가 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
+# Multipart File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=6MB
+
 # PostgreSql Database Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
